# weather_streamlit

./: Cli.py  LICENSE  README.md  historydata.py  main.py  mapweather.py  pikudhaorefalerts.py  pyproject.toml  requirements.txt  settings.json  weather.py  weatherapp.ipynb  weatherchat.py
data/: pikudoref.json  settings.json  weather.xml  yeshuvim.xlsx
