[tool.poetry]
name = "weather-streamlit"
version = "0.1.0"
description = ""
authors = ["wweavishayaknin <WWEAVISHAYAKNIN@GMAIL.COM>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"  # Adjust based on your specific Python version requirements
streamlit = "^1.4.0"  # Adjust version as per your application's requirements
pandas = "^2.2.2"
matplotlib = "^3.9.0"
geopy = "^2.4.1"
django-os-geocoder = "^0.1.6"
timezonefinder = "^6.5.0"
nltk = "^3.8.1"
pyowm = "^3.3.0"
folium = "^0.16.0"
streamlit-folium = "^0.20.0"
googletrans = "4.0.0-rc1"  # Specify the desired version here
openpyxl = "^3.1.3"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
